--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,8 @@ edition = "2021"
 clap = { version = "3.2.6", features = ["derive"] }
 colored = "2"
 corosync-config-parser = "0.1.0"
+jsonschema = "0.16.1"
 yaml-rust = "0.4"
+serde = {version = "1.0.147", features = ["derive"] }
+serde_yaml = "0.9.14"
+serde_json = "1.0.87"
