--- a/check.yml
+++ b/check.yml
@@ -1,22 +1,25 @@
-check_corosync_token_timeout:
-  id: 156F64
-  name: Corosync configuration file
-  group: Corosync
-  description: |
-    Corosync `token` timeout is set to `{{ platform.corosync.expectedTokenTimeout }}`
-  remediation: |
-    ## Abstract
-    The value of the Corosync `token` timeout is not set as recommended.
-    ## Remediation
-    ...
-  facts:
-    -
-      name: corosync_token_timeout
-      gatherer: corosync
-      argument: totem.token
-    -
-      name: some_other_fact_useful_for_this_check
-      gatherer: another_reference_to_a_gatherer
-      argument: something_else
-  expectations:
-    TDB: TBD
+id: 156F64
+name: Corosync configuration file
+group: Corosync
+description: |
+  Corosync `token` timeout is set to expected value
+remediation: |
+  ## Abstract
+  The value of the Corosync `token` timeout is not set as recommended.
+  ## Remediation
+  ...
+facts:
+  - name: corosync_token_timeout
+    gatherer: corosync.conf
+    argument: totem.token
+values:
+  - name: expected_token_timeout
+    default: 5000
+    conditions:
+      - value: 30000
+        when: env.provider == "azure" || env.provider == "aws"
+      - value: 20000
+        whens: env.provider == "gcp"
+expectations:
+  - name: timeout
+    expect: facts.corosync_token_timeout == values.expected_token_timeout
